--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,14 @@
 version: '3'
 
 services:
+  products:
+    image: products
+    deploy:
+      replicas: 2
+    ports:
+      - 5002:3000
+    depends_on:
+      - hello
   hello:
     image: hello
     deploy:
