--- a/kitchen-microservice/Dockerfile
+++ b/kitchen-microservice/Dockerfile
@@ -5,4 +5,5 @@ RUN npm install
 RUN npm install sqlite3 --save
 RUN npm install sequelize --save
 RUN npm install axios
+RUN npm install cors
 CMD ["npm", "start"]
